Implement executable plugin
